# fastapi

./: .zshrc
Documents/projetos/estudo/easydata/: Dockerfile  Makefile  README.md  alembic.ini  constitution.md  docker-compose.local.yml  pyproject.toml  pytest.ini
Documents/projetos/estudo/easydata/alembic/: env.py
Documents/projetos/estudo/easydata/alembic/versions/: 001_initial_migration.py  002_add_cnpj_receita_federal_table.py
Documents/projetos/estudo/easydata/src/trivaxion/: __init__.py
Documents/projetos/estudo/easydata/src/trivaxion/adapters/inbound/http/: admin_routes.py  analysis_routes.py  dashboard_routes.py  filiais_routes.py  search_routes.py
Documents/projetos/estudo/easydata/src/trivaxion/adapters/inbound/web/static/css/: main.css
Documents/projetos/estudo/easydata/src/trivaxion/adapters/inbound/web/templates/: login.html  new_analysis.html  users.html
Documents/projetos/estudo/easydata/src/trivaxion/adapters/outbound/persistence/: sqlalchemy_repositories.py
Documents/projetos/estudo/easydata/src/trivaxion/adapters/outbound/providers/certidao_trabalhista/: client.py  mapper.py
Documents/projetos/estudo/easydata/src/trivaxion/adapters/outbound/providers/receita_federal/: mapper.py
Documents/projetos/estudo/easydata/src/trivaxion/application/dto/: analysis_dto.py  auth_dto.py  user_dto.py
Documents/projetos/estudo/easydata/src/trivaxion/application/ports/: auth.py  providers.py
Documents/projetos/estudo/easydata/src/trivaxion/application/use_cases/: analysis_use_cases.py
Documents/projetos/estudo/easydata/src/trivaxion/domain/companies/: company.py
Documents/projetos/estudo/easydata/src/trivaxion/domain/identity/: events.py
Documents/projetos/estudo/easydata/src/trivaxion/domain/shared/: events.py
Documents/projetos/estudo/easydata/src/trivaxion/infrastructure/db/: base.py  models.py
Documents/projetos/estudo/easydata/src/trivaxion/infrastructure/di/: container.py
Documents/projetos/estudo/easydata/src/trivaxion/infrastructure/security/: password.py
Documents/projetos/estudo/easydata/src/trivaxion/infrastructure/services/: cnpj_downloader.py
Documents/projetos/estudo/easydata/src/trivaxion/static/css/: main.css
Documents/projetos/nubank/capital_gains/: Dockerfile  README.md  pyproject.toml
Documents/projetos/nubank/capital_gains/.github/: CODEOWNERS
Documents/projetos/nubank/capital_gains/.github/workflows/: ci.yml
Documents/projetos/nubank/capital_gains/src/: main.py
Documents/projetos/nubank/capital_gains/src/capital_gains/domain/: entities.py  services.py
Documents/projetos/nubank/capital_gains/src/infrastructure/: cli_adapter.py
Documents/projetos/nubank/capital_gains/tests/: runner.py  test_capital_gain.py
Documents/projetos/trivaxion/: .env
Documents/projetos/trivaxion/.windsurf/workflows/: sdd-code.md  sdd-spec.md
Documents/projetos/trivaxion/alembic/versions/: 003_add_fulltext_search_indexes.py  004_add_socios_table.py
Documents/projetos/trivaxion/landing_page/: index.html
Documents/projetos/trivaxion/scripts/seed/: initial_data.py
Documents/projetos/trivaxion/src/trivaxion/: main.py
Documents/projetos/trivaxion/src/trivaxion/application/dto/: analysis_dto.py
Documents/projetos/trivaxion/src/trivaxion/application/ports/: repositories.py  search.py  source_config.py
Documents/projetos/trivaxion/tests/: conftest.py
Documents/projetos/trivaxion/tests/unit/domain/: test_user.py  test_value_objects.py
(+48 files in other folders)
